# LastRay

./: Cargo.toml  README.md  asm  intersect.s  perf  pre_bvh_audi
lib/write_png/: Cargo.toml
lib/write_png/src/: lib.rs
res/: 512_poly.mtl  Audi_R8.mtl  cornell-box.mtl
src/: main.rs
src/accel/: bvh.rs  mod.rs  slow.rs
src/camera/: mod.rs
src/geometry/: mod.rs  model.rs  sphere.rs  wec3x8.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/scene/: mod.rs
