[package]
name = "lastone"
version = "0.1.0"
authors = ["Dario Sučić <dariosucic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ultraviolet = "0.9.0"
write_png = { path = "./lib/write_png" }

nanorand = { version = "0.7.0", features = ["wyrand"] }

rayon = "1.5.1"
tobj = { version = "3.2.2", features = ["log"]}

[profile.release]
debug = true
codegen-units = 1